Fix padding-issues on mobile for bulma nav

--- a/web/static/sass/app.scss
+++ b/web/static/sass/app.scss
@@ -39,3 +39,11 @@ form.link {
     }
   }
 }
+
+
+
+@include mobile {
+  .nav-item {
+    padding: 10px !important;
+  }
+}
